@@ -1,6 +1,12 @@
 # ChangeLog for net-firewall/sanewall
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/sanewall/ChangeLog,v 1.4 2013/11/06 06:00:14 radhermit Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/sanewall/ChangeLog,v 1.5 2014/11/28 17:04:05 radhermit Exp $
+
+*sanewall-1.1.6-r1 (28 Nov 2014)
+
+  28 Nov 2014; Tim Harder <radhermit@gentoo.org> +sanewall-1.1.6-r1.ebuild,
+  files/sanewall.confd, files/sanewall.initd:
+  Add support to pass sanewall arguments (bug #493860).
 
 *sanewall-1.1.6 (06 Nov 2013)
 
